--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,6 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+OfficeConverterTest/OfficeConverterTest.csproj
+OfficeConverterTest/OfficeConverterTest.csproj
+OfficeConverterTest/OfficeConverterTest.csproj
